examples/should-fail/f41_impred_predicative_leak_sort2.lean
def demo4_bad_predicative_leak_sort2 : Sort 2 :=
  (U : Sort 2) -> Prop
